multicert/yamls/04-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gcp-pod
  namespace: thm
  labels:
    app: gcp-app
spec:
  containers:
# hello 
  - name: hello
    image: "gcr.io/google-samples/hello-app:2.0"
  - name: hello-2
    image: "gcr.io/google-samples/hello-app:2.0"
