multicert/yamls/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcp-app
  name: gcp-services-app1
  namespace: thm
spec:
  ports:
  - port: 443
    name: app1
    protocol: TCP
    targetPort: 50001
  selector:
    app: gcp-app
