multicert/yamls/06-k8s2-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress-k8s2
  namespace: thm
  annotations:  
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/override: "https-only"
spec:
  tls:
  - secretName: api-tls-k8s2
    hosts:
      - secondk8s.eccordion.com
  rules:
  - host: secondk8s.eccordion.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gcp-services-app2
          servicePort: 443
